# Sycophancy_Probes

./: .gitignore  README.md  assertiveness_dataset_creation.py  download_models.py  inference_mha.py  inference_mlp.py  inference_residual.py  main.py  pyproject.toml  slurm-10721593.out  slurm_10721607.out  submit_openai_batch_job.py
calibration/: __init__.py  main.py
calibration/analysis/: __init__.py  attention_patterns.py  direction_comparison.py
calibration/data/: __init__.py  assertion_loader.py
calibration/probing/: __init__.py  extract_activations.py  probe_heatmap.py  train_probes.py
calibration/scoring/: __init__.py  displayed_confidence.py  gap_labels.py  internal_confidence.py
calibration/steering/: __init__.py  evaluate_steering.py  intervene.py
log/: slurm_10722618.err  slurm_10722618.out  slurm_10722624.err  slurm_10722624.out
predictions_sycophancy/: truthfulqa_gemma-3_answers_16_-5.0_mha_linear.csv
probe/: assertiveness_data_utils.py  check_assertiveness.py  compute_proj_std.py  data_generation.py  df.csv  evaluate_assertiveness.py  evaluate_correctness.py  evaluate_epint.py  extract_activation.py  final_steered.csv  final_unsteered.csv  test_data.csv  test_data_gemma-3_answers_16_-5.0_mha_linear.csv  train.py  train_responses.csv  uncertainty_data_utils.py  utils.py
